--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### your site title here
 
-title: The Dark Side
+title: Miner's First Site
 
 permalink: /:title
 
@@ -16,13 +16,6 @@ exclude:
 highlighter: rouge
 markdown: kramdown
 ### exclude the instructions / write-up in the README.md
-
-
-# Tracker
-analytics: UA-83979019-1
-
-# Comments
-disqus-shortname: webjeda-demo
 
 #optimization
 #compress.html
